plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'md.ceiti.md'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'md.ceiti.md.cazarefx_hibernate'
    mainClass = 'md.ceiti.md.cazarefx_hibernate.HelloApplication'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21.0.6'
    implementation 'org.openjfx:javafx-fxml:21.0.6'
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude(group: 'org.openjfx')
    }
    compileOnly('jakarta.enterprise:jakarta.enterprise.cdi-api:4.1.0')
// https://mvnrepository.com/artifact/org.hibernate/hibernate-core
    implementation 'org.hibernate:hibernate-core:6.5.2.Final'
    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    runtimeOnly 'org.postgresql:postgresql:42.7.3'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'org.openjfx:javafx-controls:21'
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}


test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
tasks.withType(JavaExec) {
    jvmArgs = [
            '--module-path', 'C:\\Users\\Macovei Daniel\\OneDrive\\Desktop\\javafx-sdk-21.0.6\\lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
